# Deep-Fake-EffecNetB0-Tensorflow-Model-

./: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
results/: text.txt
src/effnetb0_deep_learning/: __init__.py  cli.py
tests/: __init__.py  test_effnetb0_deep_learning.py
utils/: 00-convert_video_to_image.py  01a-crop_faces_with_mtcnn.py  02-prepare_fake_real_dataset.py  03-train_cnn.py
